<resources>
    <string name="app_name" translatable="false">DAS_CarritoCompra</string>
    <string name="carrito_text">Carrito de la Compra</string>
    <string name="mensaje_eliminado">eliminado</string>
    <string name="btnImportar">Importar carrito</string>
    <string name="btnExportar">Exportar carrito</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="msgRecordatorio">¡No te olvides de comprar los productos del carrito!</string>
    <string name="ver">Ver</string>
    <string name="verCarrito">Ver Carrito</string>
    <string name="carritoVacio">El carrito está vacío.</string>
    <string name="carritoExportadoExito">Carrito exportado con éxito.</string>
    <string name="carritoExportadoError">Error al exportar el carrito.</string>
    <string name="carritoImportadoExito">Carrito importado con éxito.</string>


    <string name="btnAnadirProductoTexto">Añadir Producto</string>
    <string name="btnEditarProductoTexto">Editar Producto</string>
    <string name="btnBorrarProductoTexto">Borrar</string>

    <string name="Carbohidrato">Carbohidrato</string>
    <string name="Proteina">Proteina</string>
    <string name="Grasa">Grasa</string>
    <string name="Otro">Otro</string>

    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>

    <string name="nuevoNombre">Nuevo Nombre</string>
    <string name="anadido"> añadido</string>
    <string name="actualizadoA"> actualizado a </string>
    <string name="errorAnadir">"Por favor, ingresa un texto"</string>
    <string name="errorEditar">Por favor, selecciona un producto y proporciona un nuevo nombre</string>

    <string name="confirmarBorrado">Confirmar Borrado</string>
    <string name="estasSeguroBorrado">¿Estás seguro de que quieres borrar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="borradoExitoso">borrado exitosamente</string>
    <string name="errorBorrado">Error al borrar</string>
    <string name="anadidoAlCarrito">añadido al carrito</string>
    <string name="errorAnadirAlCarrito">Error al añadir al carrito</string>
    <string name="modoOscuro">Modo Oscuro</string>


    <string name="idioma">Idioma</string>
    <string name="castellano">Castellano</string>
    <string name="ingles">Inglés</string>
</resources>