<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!-- Sección de idioma con TextView e RadioButtons en disposición vertical -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/textViewIdioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idioma"
            />

        <RadioGroup
            android:id="@+id/radioGroupIdioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/radioButtonCastellano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/castellano"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/radioButtonIngles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingles"
                />
        </RadioGroup>
        <!-- Switch para cambiar entre estilos de la barra de navegación -->
        <Switch
            android:id="@+id/switchEstilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modoOscuro"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <!-- Toolbar en la parte inferior -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/labarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="?attr/toolbarStyle"
        android:elevation="4dp"
        android:layout_gravity="bottom"
        />

</LinearLayout>
