<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textViewCarrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrito_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCarrito"
        android:layout_above="@id/btnImportar"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnImportar"
        android:layout_above="@id/btnExportar"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExportar"
        android:layout_above="@+id/labarra"
        android:layout_centerHorizontal="true"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/labarra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
